--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 #수정하였음.
+# dklsldlkskldalasdlkas;ldak;sldk;askd
+# sadlka;lsdk;lakdl;
+# adl;kasl;dka;sldkl;askd;laksd;laks;dd
 # Download this file using PowerShell v3 under Windows with the following comand:
 # Invoke-WebRequest https://gist.githubusercontent.com/kmorcinek/2710267/raw/ -OutFile .gitignore
 # or wget:
