--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -45,16 +45,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimObject.Class1.cs" />
     <Compile Include="GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameObject.cs" />
+    <Compile Include="LoseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoseForm.Designer.cs">
+      <DependentUpon>LoseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Missile.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WinForm.Designer.cs">
+      <DependentUpon>WinForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoseForm.resx">
+      <DependentUpon>LoseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +94,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="WinForm.resx">
+      <DependentUpon>WinForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -81,6 +112,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\BackGround.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BlueObject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cClearObject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cHpObject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GreenObject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HpMark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Lose.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RedObject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Win.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
