미사일 파일입출력 성공 (인덱스 범위 에러 발생)

--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimObject.Class1.cs" />
+    <Compile Include="AnimObject.cs" />
     <Compile Include="GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
