--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimObject.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
