--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -54,6 +54,12 @@
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GameObject.cs" />
+    <Compile Include="InputRecordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputRecordForm.Designer.cs">
+      <DependentUpon>InputRecordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoseForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     </Compile>
     <EmbeddedResource Include="GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputRecordForm.resx">
+      <DependentUpon>InputRecordForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoseForm.resx">
       <DependentUpon>LoseForm.cs</DependentUpon>
