--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -60,11 +60,11 @@
     <Compile Include="InputRecordForm.Designer.cs">
       <DependentUpon>InputRecordForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoseForm.cs">
+    <Compile Include="EndForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoseForm.Designer.cs">
-      <DependentUpon>LoseForm.cs</DependentUpon>
+    <Compile Include="EndForm.Designer.cs">
+      <DependentUpon>EndForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -76,20 +76,14 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WinForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WinForm.Designer.cs">
-      <DependentUpon>WinForm.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputRecordForm.resx">
       <DependentUpon>InputRecordForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoseForm.resx">
-      <DependentUpon>LoseForm.cs</DependentUpon>
+    <EmbeddedResource Include="EndForm.resx">
+      <DependentUpon>EndForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -104,9 +98,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="WinForm.resx">
-      <DependentUpon>WinForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
