--- a/윈플텀프/윈플텀프/윈플텀프.csproj
+++ b/윈플텀프/윈플텀프/윈플텀프.csproj
@@ -144,5 +144,8 @@
   <ItemGroup>
     <None Include="Resources\Win.PNG" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
