--- a/KPUWindowProgramming/KPUWindowProgramming/KPUWindowProgramming.csproj
+++ b/KPUWindowProgramming/KPUWindowProgramming/KPUWindowProgramming.csproj
@@ -6,11 +6,26 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1CF63B4F-16A7-4DCD-92AB-9CDB82AD3B93}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>윈플텀프</RootNamespace>
-    <AssemblyName>윈플텀프</AssemblyName>
+    <RootNamespace>KPUWindowProgramming</RootNamespace>
+    <AssemblyName>KPUWindowProgramming</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -146,6 +161,48 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Player2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern0.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern1.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern2.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern3.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern4.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern5.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern6.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern7.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern8.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pattern\Pattern9.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1%28x86 및 x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
